--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,6 +27,7 @@
         app:slideactionview_sliderRightDescription="@string/slider_right_description"
         app:slideactionview_sliderBackground="@drawable/slider_bg"
         app:slideactionview_sliderRight="@drawable/slider_right"
-        app:slideactionview_sliderLeft="@drawable/slider_left" />
+        app:slideactionview_sliderLeft="@drawable/slider_left"
+        app:slideactionview_enableCompleteAnimation="true" />
 
 </FrameLayout>
